--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "894e28a1-a50b-48ec-8118-3327b9a737af"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
